# zoox

./: .coverage  .envrc  .gitignore  00-START-HERE.txt  AGENT-RUN-NOTES-DELIVERABLES.md  AGENT-RUN-NOTES-OVERVIEW.md  AGENT-RUN-NOTES-PATTERN-ANALYSIS.md  ANALYSIS-README.md  ARCHITECTURE-ANALYSIS.md  ARCHITECTURE-DECISIONS.md  ARCHITECTURE-README.md  ARCHITECTURE-SUMMARY.txt  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DECISION-CHECKLIST.md  EDGE-CASES-WHERE-RUN-NOTES-FAIL.md  HARNESS-LEARNING-SYSTEMS-MAP.md  HIDDEN-DEPENDENCIES.md  IMPLEMENTATION-ANALYSIS.md  IMPLEMENTATION-ANALYSIS.summary.txt  INDEX.md  INTEGRATION-MATRIX.md  KAREN-VERDICT-AGENT-RUN-NOTES.md  NEXT-SESSION.md  QUICK-REFERENCE.txt  README.md  ROADMAP.md  START-HERE-RUN-NOTES.md  START-HERE.md  TIER-1-2-IMPLEMENTATION.md  VISION-NATIVE-AI-INFRASTRUCTURE.md  VISION-SUMMARY.md  WEEK-1-SPRINT.md  architect  complete-reef-migration.sh  pyproject.toml  reef-mcp.sh  tank.py  tidepool.py
.claude/: ralph-loop.local.md  scoped-rules.md  whatif-session.blob.xml
.claude/agents/: reef-format-architect.json  reef-orchestrator.md  reef-strategist.md  reef-validator.md
.claude/archive/: 20260113-context.blob.xml  20260114-context.blob.xml  20260115-context.blob.xml
.claude/audit/: audit-2026-01-15.jsonl  audit-2026-01-16.jsonl
.claude/constraints/: project-rules.blob.xml
.claude/currents/: reef-vitality.current
.claude/decisions/: reef-vitality-implementation-l.blob.xml
.claude/designs/: changelog-system.blob.xml  polip-progressive-loading.md
.claude/explorations/: syntax-feasibility.md
.claude/formats/: current.spec
.claude/ideas/: !IDEAS.md  2026-01-16-syntax-free-reef.md  adversarial-decay.md  ai-first-reef.md  composable-operations.md  decay-as-illusion.md  destruction-as-health.md  metaphor-death-rebirth.md  polip-drift-migration.md  reef-decay-as-true-form.md  reef-evolution-not-damage.md  reef-pollution-catalyst.md  self-healing-knowledge-ecosystems.md  spark-to-idea-pipeline.md  sparks-without-loops.md  tenacious-agent-mode.md  threads-as-silence.md
.claude/runs/: run-001.xml  run-002.xml  run-003.xml  run-004.xml  run-005.xml  run-006.xml  run-007.xml  run-008.xml  run-009.xml  run-010.xml  run-011.xml  run-012.xml  run-013.xml  run-014.xml  run-015.xml  run-016.xml  run-017.xml  run-018.xml  run-019.xml  run-020.xml  run-021.xml  run-022.xml  run-023.xml  run-024.xml  run-025.xml  run-026.xml  run-027.xml  run-028.xml  run-029.xml  run-030.xml  run-031.xml  run-032.xml  run-033.xml  (+11 more)
.goopy/: README.md
.reef/: index.json  reef.manifest
docs/: AGENT-SDK.md  WORKERS.md  agent-run-notes-design.md  harness-integration.md  run-notes-user-guide.md  runlog-technical-spec.md  statusline-designs.md  statusline-mcp-protocol.md  statusline-spark-grades.md
tests/: __init__.py  stress_test.py  test_absurd.py  test_agents.py  test_anti_git.py  test_blob.py  test_bugs.py  test_calcification.py  test_cli.py  test_format_version.py  test_fs.py  test_glob.py  test_mcp.py  test_pii_semantic.py  test_polip.reef  test_safety.py  test_security.py  test_sexpr.py  test_skills.py  test_trench.py  test_workers.py
(+186 files in other folders)
