[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "goopy"
version = "0.1.0"
description = "XML blob system for Claude Code session memory"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["ai", "claude", "session", "memory", "xml", "blobs"]
authors = [
    { name = "Nolan" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.scripts]
goopy = "goopy.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/goopy"]

[tool.pytest.ini_options]
pythonpath = ["src"]
