[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reef"
version = "0.1.0"
description = "Symbiotic memory for AI"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["ai", "claude", "session", "memory", "xml", "polips", "reef"]
authors = [
    { name = "Nolan" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.scripts]
reef = "reef.cli:main"
reef-mcp = "reef.mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/reef"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[dependency-groups]
dev = [
    "pytest-asyncio>=1.3.0",
]
